tests/NormalTests/paczka1/fuzzy1/89078098.err
Error in line 5: S436 S436 17,2
Error in line 7: S436 S633 6,1
Error in line 12: S436 A551 43,2
Error in line 15: S436 S436 32,42
Error in line 14: S436 S436 73,2
Error in line 17: S436 A793 76,9
Error in line 21: EIaO7 A551 6,8
Error in line 28: HzQgaacvFY S436 39,3
Error in line 33: UpKxV5p4Bp S633 308,1
Error in line 34: HzQgaacvFY S633 96,9
